--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -1,24 +1,167 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Blc-jR-QaT">
+                                <rect key="frame" x="124.5" y="732" width="85" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="9r2-IS-Hyc"/>
+                                    <constraint firstAttribute="width" constant="85" id="Fkv-FT-dyQ"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="進む">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="Susumu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Gg-2g-DEo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3b-mx-cYk">
+                                <rect key="frame" x="204.5" y="732" width="85" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="0Mr-Rh-yCc"/>
+                                    <constraint firstAttribute="height" constant="50" id="PZ4-Qu-qS8"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="戻る">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="Modoru:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oZs-vf-Kv1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pnT-8n-KLQ">
+                                <rect key="frame" x="129.5" y="792" width="155" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="xF6-9u-5PI"/>
+                                    <constraint firstAttribute="width" constant="155" id="zGE-J3-y1r"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="再生/停止">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="StartStop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LoL-Cj-6Q1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hgx-iJ-QaG">
+                                <rect key="frame" x="87.5" y="302" width="239" height="172"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="172" id="5d5-yc-L8w"/>
+                                    <constraint firstAttribute="width" constant="239" id="HzO-Am-a6N"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="Fx6-rD-1Kn" kind="show" id="YFi-0O-8PI"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BRa-yc-7TV">
+                                <rect key="frame" x="87.5" y="302" width="239" height="172"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="172" id="Ysn-6O-PKH"/>
+                                    <constraint firstAttribute="width" constant="239" id="eiM-Ee-XQb"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BRa-yc-7TV" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="1aE-Vf-Lai"/>
+                            <constraint firstItem="g3b-mx-cYk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="40" id="7AX-dJ-FHT"/>
+                            <constraint firstItem="Hgx-iJ-QaG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="86x-CU-nz7"/>
+                            <constraint firstItem="g3b-mx-cYk" firstAttribute="height" secondItem="Blc-jR-QaT" secondAttribute="height" id="ZGu-sY-jRd"/>
+                            <constraint firstItem="pnT-8n-KLQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dM4-NT-pvi"/>
+                            <constraint firstItem="pnT-8n-KLQ" firstAttribute="top" secondItem="Blc-jR-QaT" secondAttribute="bottom" constant="10" id="foM-6F-piA"/>
+                            <constraint firstItem="g3b-mx-cYk" firstAttribute="top" secondItem="Blc-jR-QaT" secondAttribute="top" id="nCt-n6-QWa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pnT-8n-KLQ" secondAttribute="bottom" constant="20" id="noJ-yb-GVl"/>
+                            <constraint firstItem="BRa-yc-7TV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="okp-1S-t6e"/>
+                            <constraint firstItem="Hgx-iJ-QaG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rPZ-56-13z"/>
+                            <constraint firstItem="pnT-8n-KLQ" firstAttribute="top" secondItem="g3b-mx-cYk" secondAttribute="bottom" constant="10" id="wOg-xq-fSb"/>
+                            <constraint firstItem="Blc-jR-QaT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-40" id="xDB-mL-pnq"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ImageView" destination="BRa-yc-7TV" id="7Kv-su-1lI"/>
+                        <outlet property="ImageViewButton" destination="Hgx-iJ-QaG" id="xRq-hf-pWn"/>
+                        <outlet property="ModoruButton" destination="g3b-mx-cYk" id="WZd-og-fjR"/>
+                        <outlet property="StartStopButton" destination="pnT-8n-KLQ" id="uS4-0L-OYR"/>
+                        <outlet property="SusumuButton" destination="Blc-jR-QaT" id="OmH-7Q-naH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="28.985507246376812" y="69.642857142857139"/>
+        </scene>
+        <!--Big View Controller-->
+        <scene sceneID="7HU-gj-HOy">
+            <objects>
+                <viewController id="Fx6-rD-1Kn" customClass="BigViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nnX-av-key">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lgq-h9-oS0">
+                                <rect key="frame" x="164.5" y="708" width="85" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="JSV-b9-Vfm"/>
+                                    <constraint firstAttribute="height" constant="50" id="luQ-He-Tya"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="戻る">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="AOd-sS-ReS" kind="unwind" unwindAction="unwind:" id="3Qk-qM-3Tu"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Crq-QS-B9f">
+                                <rect key="frame" x="14" y="258.5" width="386" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="205" id="Fil-Ax-ejg"/>
+                                    <constraint firstAttribute="width" constant="386" id="o1o-aZ-sxF"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5gP-Bc-JzP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Crq-QS-B9f" firstAttribute="centerY" secondItem="nnX-av-key" secondAttribute="centerY" constant="-60" id="Tmq-oN-TRZ"/>
+                            <constraint firstItem="Crq-QS-B9f" firstAttribute="centerX" secondItem="nnX-av-key" secondAttribute="centerX" id="ZmV-fm-e5u"/>
+                            <constraint firstItem="5gP-Bc-JzP" firstAttribute="bottom" secondItem="lgq-h9-oS0" secondAttribute="bottom" constant="50" id="eGs-Pm-T2U"/>
+                            <constraint firstItem="lgq-h9-oS0" firstAttribute="centerX" secondItem="nnX-av-key" secondAttribute="centerX" id="saG-Hg-GWc"/>
+                            <constraint firstItem="lgq-h9-oS0" firstAttribute="centerX" secondItem="Crq-QS-B9f" secondAttribute="centerX" id="zlg-vd-oRu"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="m9B-B2-Lc2"/>
+                    <connections>
+                        <outlet property="BigImageView" destination="Crq-QS-B9f" id="Bdz-V5-qrD"/>
+                        <outlet property="Modoru" destination="lgq-h9-oS0" id="UQb-65-Q5H"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v4G-RG-0cD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="AOd-sS-ReS" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="666.66666666666674" y="69.642857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
